Updated imports to use the "multilevel" package instead of "glevel" and refactor code for cleaner syntax and modern practices
Replaced outdated type casting with pattern matching, improved collection checks for readability, and updated imports to use the "multilevel" package instead of "glevel". Removed unused imports and logging implementation for efficiency, aligning with modern Java best practices.